--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,32 +1,66 @@
 <div class="grid-item">
-  {% if project.redirect %}
-  <a href="{{ project.redirect }}" target="_blank">
-  {% else %}
   <a href="{{ project.url | relative_url }}">
-  {% endif %}
-    <div class="card hoverable">
-      {% if project.img %}
-      <img src="{{ project.img | relative_url }}" alt="project thumbnail">
-      {% endif %}
-      <div class="card-body">
-        <h2 class="card-title text-lowercase">{{ project.title }}</h2>
-        <p class="card-text">{{ project.description }}</p>
-        <div class="row ml-1 mr-1 p-0">
-          {% if project.github %}
-          <div class="github-icon">
-            <div class="icon" data-toggle="tooltip" title="Code Repository">
-              <a href="{{ project.github }}" target="_blank"><i class="fab fa-github gh-icon"></i></a>
-            </div>
-            {% if project.github_stars %}
-            <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-              <i class="fas fa-star"></i>
-              <span id="{{ project.github_stars }}-stars"></span>
-            </span>
-            {% endif %}
+    <!-- card src: https://codepen.io/creativemanner/pen/NWrNWrd -->
+    <div class="container">
+      <div class="card text-white card-has-bg click-col"
+        style="background-image:url('{{ project.img | relative_url }}');">
+        {% if project.img %}
+        <img class="card-img d-none" src="{{ project.img | relative_url }}" alt="{{ project.title }}">
+        {% endif %}
+        <div class="card-img-overlay d-flex flex-column">
+          <div class="card-body">
+            <!-- <small class="card-meta mb-2">Thought Leadership</small> -->
+            <h4 class="card-title mt-0 ">{{ project.title }}
+            </h4>
           </div>
-          {% endif %}
+
+
+          <div class="card-footer">
+            <small> {{ project.description }}</small>
+          </div>
+
         </div>
       </div>
+
+
+
+
     </div>
   </a>
 </div>
+
+
+
+
+<!-- <div class="grid-item">
+  {% if project.redirect %}
+  <a href="{{ project.redirect }}" target="_blank">
+    {% else %}
+    <a href="{{ project.url | relative_url }}">
+      {% endif %}
+      <div class="card hoverable">
+        {% if project.img %}
+        <img src="{{ project.img | relative_url }}" alt="project thumbnail">
+        {% endif %}
+        <div class="card-body">
+          <h2 class="card-title text-lowercase">{{ project.title }}</h2>
+          <p class="card-text">{{ project.description }}</p>
+          <div class="row ml-1 mr-1 p-0">
+            {% if project.github %}
+            <div class="github-icon">
+              <div class="icon" data-toggle="tooltip" title="Code Repository">
+                <a href="{{ project.github }}" target="_blank"><i class="fab fa-github gh-icon"></i></a>
+              </div>
+              {% if project.github_stars %}
+              <span class="stars" data-toggle="tooltip" title="GitHub Stars">
+                <i class="fas fa-star"></i>
+                <span id="{{ project.github_stars }}-stars"></span>
+              </span>
+              {% endif %}
+            </div>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </a>
+</div> -->
