--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,21 +6,22 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-     {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+      {% if site.title == "blank" %}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }}
+      {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
     </h1>
-     <p class="desc">{{ page.description }}</p>
+    <p class="desc">{{ page.description }}</p>
   </header>
 
   <article>
     {% if page.profile %}
     <div class="profile float-{% if page.profile.align == 'left' %}left{% else %}right{% endif %}">
       {% if page.profile.image %}
-        <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
+      <img class="img-fluid z-depth-1 rounded" src="{{ page.profile.image | prepend: '/assets/img/' | relative_url }}">
       {% endif %}
       {% if page.profile.address %}
-        <div class="address">
-          {{ page.profile.address }}
-        </div>
+      <div class="address">
+        {{ page.profile.address }}
+      </div>
       {% endif %}
     </div>
     {% endif %}
@@ -30,15 +31,21 @@ layout: default
     </div>
 
     {% if page.news %}
-      {% include news.html %}
+    {% include news.html %}
     {% endif %}
 
     {% if page.selected_papers %}
-      {% include selected_papers.html %}
+    {% include selected_papers.html %}
     {% endif %}
 
     {% if page.social %}
+
+
     <div class="social">
+      <b>Let’s work together</b>
+
+      <p>Open to new challenges. Let's work together to make things happen. Looking forward.</p>
+
       <div class="contact-icons">
         {% include social.html %}
       </div>
