--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -204,7 +204,7 @@ blockquote {
 .social {
   text-align: center;
   .contact-icons {
-    font-size: 4rem;
+    font-size: 2rem;
     a {
       i::before {
         color: var(--global-text-color);
@@ -318,28 +318,104 @@ footer.sticky-bottom {
 // Projects
 
 .projects {
+  .wrapper{margin:10vh}
+//post card styles
   a {
     text-decoration: none;
 
-    &:hover {
-      .card-title {
-        color: var(--global-theme-color);
-      }
-    }
+    // &:hover {
+    //   .card-title {
+    //     color: var(--global-theme-color);
+    //   }
+    // }
   }
 
-  .card {
-    img {
-      width: 100%;
+  // .card {
+  //   img {
+  //     width: 100%;
+  //   }
+  //   .card-title {
+  //     color: $black-color;
+  //   }
+  // }
+  .card{
+    border: none;
+    transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+   overflow:hidden;
+   border-radius:20px;
+   min-height:300px;
+     box-shadow: 0 0 12px 0 rgba(0,0,0,0.2);
+  
+   @media (max-width: 768px) {
+    min-height:350px;
+  }
+  
+  @media (max-width: 420px) {
+    min-height:300px;
+  }
+  .card-img{
+    object-fit: cover;
+  }
+   &.card-has-bg{
+   transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+    background-size:120%;
+    background-repeat:no-repeat;
+    background-position: center center;
+    
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background: inherit;
+      -webkit-filter: grayscale(1);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
+    filter: grayscale(100%);}
+  
+    &:hover {
+      transform: scale(0.98);
+       box-shadow: 0 0 5px -2px rgba(0,0,0,0.3);
+      background-size:130%;
+       transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  
+      .card-img-overlay {
+        transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+        background: rgb(35,79,109);
+       background: linear-gradient(0deg, rgba(4,69,114,0.5) 0%, rgba(4,69,114,1) 100%);
+       }
     }
-    .card-title {
-      color: $black-color;
-    }
+  }
+   
+  .card-footer{color:rgb(105, 233, 233)}
+  .card-title{color:white}
+   .card-body{ 
+     text-align: center;
+     margin-top:70px;
+
+     transition: all 500ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+   &:hover {
+     .card-body{
+       margin-top:100px;
+       transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+     }
+   cursor: pointer;
+   transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+  }
+   .card-img-overlay {
+    transition: all 800ms cubic-bezier(0.19, 1, 0.22, 1);
+   background: rgb(35,79,109);
+  background: linear-gradient(0deg, rgba(35,79,109,0.3785889355742297) 0%, rgba(69,95,113,1) 100%);
+  }
   }
 
   .card-item {
     width: auto;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 
     .row {
       display: flex;
@@ -349,7 +425,9 @@ footer.sticky-bottom {
 
   .grid-item {
     width: 250px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
+    align-items: center;
+    // margin:5vh
   }
 
   h2.category {
