--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -6,8 +6,8 @@ layout: default
 
   <header class="post-header">
     <h1 class="post-title">
-      {% if site.title == "blank" %}{{ site.first_name }} {{ site.middle_name }}
-      {{ site.last_name }}{% else %}{{ site.title }}{% endif %}
+      {{ site.first_name }} {{ site.middle_name }}
+      {{ site.last_name }}
     </h1>
     <p class="desc"><span class="font-weight-bold">{{ page.description }}</span></p>
   </header>
