--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -9,7 +9,7 @@ layout: default
       {{ site.first_name }} {{ site.middle_name }}
       {{ site.last_name }}
     </h1>
-    <p class="desc"><span class="font-weight-bold">{{ page.description }}</span></p>
+    <p class="desc"><span class="font-weight-bold"></span></p>
   </header>
 
   <article>
